# rust_axum_tutorial

./: Cargo.toml  README.md
src/: main.rs
src/endpoints/: bingo.rs  index.rs  weather.rs
