[package]
name = "psfa_sites_rewrite_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.7"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
sqlx = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
